--- a/front/index.html
+++ b/front/index.html
@@ -7,26 +7,22 @@
   <link rel="icon" type="image/png" href="static/favicon.ico" />
 
   <!-- HTML Meta Tags -->
-  <title>TeamBenchmark</title>
-  <meta name="description" content="TeamBenchmark is a platform to share and visualize benchmarks!">
+  <title>Benchmaker</title>
+  <meta name="description" content="Benchmaker is a platform to share and visualize benchmarks!">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="TeamBenchmark">
-  <meta itemprop="description" content="TeamBenchmark is a platform to share and visualize benchmarks!">
-  <meta itemprop="image" content="https://benchmark.tk/static/favicon.ico">
+  <meta itemprop="name" content="Benchmaker">
+  <meta itemprop="description" content="Benchmaker is a platform to share and visualize benchmarks!">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://benchmark.tk">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="TeamBenchmark">
-  <meta property="og:description" content="TeamBenchmark is a platform to share and visualize benchmarks!">
-  <meta property="og:image" content="https://benchmark.tk/static/favicon.ico">
+  <meta property="og:title" content="Benchmaker">
+  <meta property="og:description" content="Benchmaker is a platform to share and visualize benchmarks!">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="TeamBenchmark">
-  <meta name="twitter:description" content="TeamBenchmark is a platform to share and visualize benchmarks!">
-  <meta name="twitter:image" content="https://benchmark.tk/static/favicon.ico">
+  <meta name="twitter:title" content="Benchmaker">
+  <meta name="twitter:description" content="Benchmaker is a platform to share and visualize benchmarks!">
 </head>
 
 <body>
